[gd_scene load_steps=3 format=3 uid="uid://ebt58f7ocsbq"]

[ext_resource type="Script" path="res://UI/paused_menu.gd" id="1_ai3nj"]
[ext_resource type="AudioStream" uid="uid://ket4w1sc3tsb" path="res://sounds/Button.wav" id="3_6n3od"]

[node name="PausedMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ai3nj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 215.0
offset_right = 773.0
offset_bottom = 445.0
color = Color(0, 0, 0, 0.572549)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Пауза
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Продолжить игру"

[node name="RestartBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Перезапустить игру"

[node name="QuitBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Выйти"

[node name="RestartMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="buttonAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6n3od")

[connection signal="pressed" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="GridContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
